--- a/sumstat_imputation/sumstat_imputation_evaluation.Rmd
+++ b/sumstat_imputation/sumstat_imputation_evaluation.Rmd
@@ -163,6 +163,18 @@ done
 
 ***
 
+##### Linkage imputation (LIMP - preliminary name) - Johan's method
+```{bash, eval=F, echo=T}
+
+for lev in "05" "1" "15" "2" "25" "3"; do sbatch --time 2-00:00:00 --partition brc,shared --job-name="impt_$lev" --ntasks 1 --cpus-per-task 4 --mem 24G --wrap="Rscript LIMP_evaluation.R -t ADHD05 -a $lev" --output "LIMP_evaluation.ADHD05_$lev.$(date +%Y%m%d).out.txt"; done
+for lev in "05" "1" "15" "2" "25" "3"; do sbatch --time 2-00:00:00 --partition brc,shared --job-name="impt_$lev" --ntasks 1 --cpus-per-task 4 --mem 24G --wrap="Rscript LIMP_evaluation.R -t ANXI02 -a $lev" --output "LIMP_evaluation.ANXI02_$lev.$(date +%Y%m%d).out.txt"; done
+for lev in "05" "1" "15" "2" "25" "3"; do sbatch --time 2-00:00:00 --partition brc,shared --job-name="impt_$lev" --ntasks 1 --cpus-per-task 4 --mem 24G --wrap="Rscript LIMP_evaluation.R -t COAD01 -a $lev" --output "LIMP_evaluation.COAD01_$lev.$(date +%Y%m%d).out.txt"; done
+for lev in "05" "1" "15" "2" "25" "3"; do sbatch --time 2-00:00:00 --partition brc,shared --job-name="impt_$lev" --ntasks 1 --cpus-per-task 4 --mem 24G --wrap="Rscript LIMP_evaluation.R -t OBES01 -a $lev" --output "LIMP_evaluation.OBES01_$lev.$(date +%Y%m%d).out.txt"; done
+for lev in "05" "1" "15" "2" "25" "3"; do sbatch --time 2-00:00:00 --partition brc,shared --job-name="impt_$lev" --ntasks 1 --cpus-per-task 4 --mem 24G --wrap="Rscript LIMP_evaluation.R -t SMOK04 -a $lev" --output "LIMP_evaluation.SMOK04_$lev.$(date +%Y%m%d).out.txt"; done
+
+  
+```
+
 ### Evaluation
 
 ***
@@ -311,6 +323,169 @@ write.csv(imp_cor, '/users/k1806347/brc_scratch/Analyses/sumstat_imputation/impu
 </details>
 
 ***
+
+##### LIMP - NOT DONE! HERE!!!
+
+<details><summary>Show code</summary>
+
+```{r, eval=F, echo=T}
+
+library(data.table)
+
+limpEvaluationResults<-c()
+limpEvaluationResults$filepath<-normalizePath("/Users/jakz/project/JZ_GED_PHD_C1/working_directory/limpEvaluation.Rds")
+
+folderpathFiltered <- normalizePath("/Users/jakz/project/JZ_GED_PHD_C1/working_directory/cleaned_filtered",mustWork = T)
+folderpathImputed <- normalizePath("/Users/jakz/project/JZ_GED_PHD_C1/working_directory/LIMP",mustWork = T)
+
+
+traitList <- c("ADHD05","ANXI02","COAD01","OBES01","SMOK04")
+levelList <- c("05","1","15","2","25","3")
+
+######
+# Compare the number of variants before and after imputation
+######
+
+
+
+n_all<-NULL
+for(gwas_i in traitList){
+  #gwas_i <- "ADHD05"
+  for(cLevel in levelList){
+    #cLevel <- "05"
+    cGwasDfOrig <- fread(file = file.path(folderpathFiltered,gwas_i,paste0(gwas_i,".cleaned.",cLevel,"_missing.gz")), na.strings =c(".",NA,"NA",""), encoding = "UTF-8",check.names = T, fill = T, blank.lines.skip = T, data.table = T, nThread = 8, showProgress = F)
+    cGwasDfImp <- fread(file = file.path(folderpathImputed,gwas_i,paste0(gwas_i,".",cLevel,".imputed.gz")), na.strings =c(".",NA,"NA",""), encoding = "UTF-8",check.names = T, fill = T, blank.lines.skip = T, data.table = T, nThread = 8, showProgress = F)
+    
+    n_before<-nrow(cGwasDfOrig)
+    n_after<-nrow(cGwasDfImp)
+    n_imput<-n_after-n_before
+    n_all<-rbind(n_all, 
+                data.frame(GWAS=gwas_i,
+                           N_before=n_before,
+                           N_after=n_after,
+                           N_imput=n_imput,
+                           Test=cLevel))
+    
+  }
+}
+limpEvaluationResults$n_all <- n_all
+
+saveRDS(object = limpEvaluationResults,file = limpEvaluationResults$filepath)
+
+#or read the results from file, because above is slow
+#limpEvaluationResults <- readRDS(file=limpEvaluationResults$filepath)
+
+
+#NOT FINISHED, HERE!!!!
+
+
+n_all$Test<-as.character(n_all$Test)
+n_all$Test[n_all$Test != 'unfiltered']<-paste0('0.',n_all$Test[n_all$Test != 'unfiltered'])
+n_all$Test<-gsub('unfiltered', 'Unfiltered', n_all$Test)
+n_all$Test<-factor(n_all$Test, levels=unique(n_all$Test))
+
+n_all$Difference<-n_all$N_after - n_all$N_before
+
+library(ggplot2)
+library(cowplot)
+
+n_all_melt<-melt(n_all)
+
+png('/users/k1806347/brc_scratch/Analyses/sumstat_imputation/ImpG_nsnp_before_after.png', res=300, units = 'px', width= 3500, height=2000)
+ggplot(data=n_all_melt, aes(x=Test, y=value/1000000)) +
+  geom_bar(data=n_all_melt[n_all_melt$variable == 'N_before' | n_all_melt$variable == 'N_after',], aes(x=Test, y=value/1000000, fill=variable), stat="identity", position=position_dodge()) +
+  geom_text(data=n_all_melt[n_all_melt$variable == 'Difference',], aes(label = value, x = Test, y = (6e+6)/1000000), position = position_dodge(width = 0.8), vjust = -0.6) +
+  facet_grid(GWAS ~ .) +
+  ylim(c(0,(8e+6)/1000000)) +
+  theme_half_open() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) + 
+  background_grid(major = 'y', minor = 'y') +
+  labs(y="N Variants (M)", x='', fill='')
+dev.off()
+
+#####
+# Plot the number of original and imputed variants after imputation
+#####
+
+png('/users/k1806347/brc_scratch/Analyses/sumstat_imputation/ImpG_nsnp_orig_imput.png', res=300, units = 'px', width= 3500, height=2000)
+ggplot(data=n_all_melt[n_all_melt$variable == 'N_before' | n_all_melt$variable == 'N_orig' | n_all_melt$variable == 'N_imput',], aes(x=Test, y=value/1000000, fill=variable)) +
+  geom_bar(stat="identity", position=position_dodge()) +
+  facet_grid(GWAS ~ .) +
+  theme_half_open() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) + 
+  background_grid(major = 'y', minor = 'y') +
+  labs(y="N Variants (M)", x='', fill='')
+dev.off()
+
+#####
+# Check correlation between imputed and observed Z scores
+#####
+
+imp_cor<-NULL
+for(gwas_i in gwas){
+  plot_list<-list()
+  original<-fread(paste0('/users/k1806347/brc_scratch/Analyses/sumstat_imputation/original/',gwas_i,'.cleaned.gz'))
+  
+  if(!('BETA' %in% names(original))){
+    original$BETA<-log(original$OR)
+  }
+
+  # Calculate Z an sign based on BETA
+  original$Z<-abs(qnorm(original$P/2))
+  original$Z<-sign(original$BETA)*original$Z
+
+  original<-original[,c('SNP','A1','A2','Z','N'),with=F]
+
+  for(prop_i in prop){
+    imputed<-fread(paste0('/users/k1806347/brc_scratch/Analyses/sumstat_imputation/imputed/ImpG/',gwas_i,'/',gwas_i,'.',gsub('.*\\.','',prop_i),'.imputed.gz'))
+    
+    # Check if some chromosomes are missing entirely
+    print(gwas_i)
+    print(prop_i)
+    print(c(1:22)[!(1:22 %in% unique(imputed$CHR))])
+    
+    # Remove SNPs that were present in GWAS
+    imputed<-imputed[imputed$TYPE != 'gwas',]
+    imputed<-imputed[,c('SNP','A1','A2','Z','R2.BLUP','N'),with=F]
+    
+    
+    
+    # Calculate correlation between imputed and observed Z scores
+    if(length(intersect(original$SNP, imputed$SNP)) == 0){
+      imp_cor<-rbind(imp_cor, data.frame(GWAS=gwas_i,
+                                         Prop=prop_i,
+                                         N_imp=0,
+                                         Cor=NA))
+    } else {
+      
+      matched<-merge(original, imputed, by=c('SNP','A1','A2'))
+      swapped<-merge(original, imputed, by.x=c('SNP','A1','A2'), by.y=c('SNP','A2','A1'))
+      swapped$Z.y<- -swapped$Z.y
+      both<-rbind(matched, swapped)
+      
+      imp_cor<-rbind(imp_cor, data.frame(GWAS=gwas_i,
+                                   Prop=prop_i,
+                                   N_imp=nrow(both),
+                                   Cor=cor(both$Z.x, both$Z.y)))
+      
+      plot_list[[paste0(gwas_i,'.',prop_i)]]<-ggplot(both, aes(x=Z.x, Z.y, colour=R2.BLUP)) +
+        geom_abline(intercept =0 , slope = 1) +
+        geom_point() +
+        labs(x='Observed Z',y='Imputed Z', title=paste0(gwas_i,', Prop = ',prop_i,', N = ',nrow(both))) +
+        coord_fixed() +
+        theme_half_open() +
+        background_grid()
+    }
+  }
+  png(paste0('/users/k1806347/brc_scratch/Analyses/sumstat_imputation/imputed/ImpG/',gwas_i,'_imp_eval.png'), units='px', height=2500, width=4000, res=300)
+  print(plot_grid(plotlist =plot_list))
+  dev.off()
+}
+
+write.csv(imp_cor, '/users/k1806347/brc_scratch/Analyses/sumstat_imputation/imputed/ImpG/imp_eval.csv', row.names=F)
+
+```
+
 
 ### Results
 
